wx-base/include/generated.h

typedef wxDateTime::TimeZone TimeZone;
typedef wxDateTime::WeekDay  WeekDay;
wxDateTime *wxDateTime_ToTimezone(const wxDateTime * self, const TimeZone * tz, bool no_dst);
wxDateTime *wxDateTime_ToUTC(const wxDateTime * self, bool no_dst);
int wxDateTime_ConvertYearToBC(int year);
void wxDateTime_GetAmPmStrings(wxString * am, wxString * pm);
int wxDateTime_GetCentury1(int year);
tm * wxDateTime_GetTmNow1();
bool wxDateTime_GetFirstWeekDay(WeekDay * first_day);
wxDateTime *wxDateTime_Now();
wxDateTime *wxDateTime_Today();
wxDateTime *wxDateTime_UNow();
// CLASS: wxDateTimeHolidayAuthority
void wxDateTimeHolidayAuthority_delete(wxDateTimeHolidayAuthority *self);
// CLASS: wxDateTimeWorkDays
void wxDateTimeWorkDays_delete(wxDateTimeWorkDays *self);
// CLASS: wxDir
void wxDir_delete(wxDir *self);
wxDir *wxDir_new();
wxDir *wxDir_new1(const wxString * dir);
void wxDir_Close(wxDir * self);
bool wxDir_GetFirst(const wxDir * self, wxString * filename, const wxString * filespec, int flags);
wxString *wxDir_GetName(const wxDir * self);
wxString *wxDir_GetNameWithSep(const wxDir * self);
bool wxDir_GetNext(const wxDir * self, wxString * filename);
bool wxDir_HasFiles(const wxDir * self, const wxString * filespec);
bool wxDir_HasSubDirs(const wxDir * self, const wxString * dirspec);
bool wxDir_IsOpened(const wxDir * self);
bool wxDir_Open(wxDir * self, const wxString * dir);
size_t wxDir_Traverse(const wxDir * self, wxDirTraverser * sink, const wxString * filespec, int flags);
bool wxDir_Exists(const wxString * dir);
wxString *wxDir_FindFirst(const wxString * dirname, const wxString * filespec, int flags);
size_t wxDir_GetAllFiles(const wxString * dirname, wxArrayString * files, const wxString * filespec, int flags);
bool wxDir_Make(const wxString * dir, int perm, int flags);
bool wxDir_Remove(const wxString * dir, int flags);
// CLASS: wxDirTraverser
void wxDirTraverser_delete(wxDirTraverser *self);
// CLASS: wxEncodingConverter
wxClassInfo *wxEncodingConverter_CLASSINFO();
bool wxEncodingConverter_Convert(const wxEncodingConverter * self, const char * input, char * output);
bool wxEncodingConverter_Convert1(const wxEncodingConverter * self, const wchar_t * input, wchar_t * output);
bool wxEncodingConverter_Convert2(const wxEncodingConverter * self, const char * input, wchar_t * output);
bool wxEncodingConverter_Convert3(const wxEncodingConverter * self, const wchar_t * input, char * output);
bool wxEncodingConverter_Convert4(const wxEncodingConverter * self, char * str);
bool wxEncodingConverter_Convert5(const wxEncodingConverter * self, wchar_t * str);
wxString *wxEncodingConverter_Convert6(const wxEncodingConverter * self, const wxString * input);
wxEncodingConverter *wxEncodingConverter_new();
// CLASS: wxEvent
wxClassInfo *wxEvent_CLASSINFO();
wxEvent * wxEvent_Clone(const wxEvent * self);
wxObject * wxEvent_GetEventObject(const wxEvent * self);
int wxEvent_GetId(const wxEvent * self);
wxObject * wxEvent_GetEventUserData(const wxEvent * self);
bool wxEvent_GetSkipped(const wxEvent * self);
long wxEvent_GetTimestamp(const wxEvent * self);
bool wxEvent_IsCommandEvent(const wxEvent * self);
void wxEvent_ResumePropagation(wxEvent * self, int propagation_level);
void wxEvent_SetEventObject(wxEvent * self, wxObject * object);
void wxEvent_SetId(wxEvent * self, int id);
void wxEvent_SetTimestamp(wxEvent * self, long time_stamp);
bool wxEvent_ShouldPropagate(const wxEvent * self);
void wxEvent_Skip(wxEvent * self, bool skip);
int wxEvent_StopPropagation(wxEvent * self);
// CLASS: wxEvtHandler
wxClassInfo *wxEvtHandler_CLASSINFO();
void wxEvtHandler_QueueEvent(wxEvtHandler * self, wxEvent * event);
void wxEvtHandler_AddPendingEvent(wxEvtHandler * self, const wxEvent * event);
bool wxEvtHandler_ProcessEvent(wxEvtHandler * self, wxEvent * event);
bool wxEvtHandler_ProcessEventLocally(wxEvtHandler * self, wxEvent * event);
bool wxEvtHandler_SafelyProcessEvent(wxEvtHandler * self, wxEvent * event);
void wxEvtHandler_ProcessPendingEvents(wxEvtHandler * self);
void wxEvtHandler_DeletePendingEvents(wxEvtHandler * self);
wxClientData * wxEvtHandler_GetClientObject(const wxEvtHandler * self);
void wxEvtHandler_SetClientObject(wxEvtHandler * self, wxClientData * data);
bool wxEvtHandler_GetEvtHandlerEnabled(const wxEvtHandler * self);
wxEvtHandler * wxEvtHandler_GetNextHandler(const wxEvtHandler * self);
wxEvtHandler * wxEvtHandler_GetPreviousHandler(const wxEvtHandler * self);
void wxEvtHandler_SetEvtHandlerEnabled(wxEvtHandler * self, bool enabled);
void wxEvtHandler_SetNextHandler(wxEvtHandler * self, wxEvtHandler * handler);
void wxEvtHandler_SetPreviousHandler(wxEvtHandler * self, wxEvtHandler * handler);
void wxEvtHandler_Unlink(wxEvtHandler * self);
bool wxEvtHandler_IsUnlinked(const wxEvtHandler * self);
void wxEvtHandler_AddFilter(wxEventFilter * filter);
void wxEvtHandler_RemoveFilter(wxEventFilter * filter);
wxEvtHandler *wxEvtHandler_new();