wx-base/src/generated/ffi.rs

    pub fn wxDateTime_ToTimezone(
        self_: *const c_void,
        tz: *const c_void,
        no_dst: bool,
    ) -> *mut c_void;
    pub fn wxDateTime_ToUTC(self_: *const c_void, no_dst: bool) -> *mut c_void;
    pub fn wxDateTime_ConvertYearToBC(year: c_int) -> c_int;
    pub fn wxDateTime_GetAmPmStrings(am: *mut c_void, pm: *mut c_void);
    // NOT_SUPPORTED: pub fn wxDateTime_GetBeginDST(year: c_int, country: Country) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetEndDST(year: c_int, country: Country) -> *mut c_void;
    pub fn wxDateTime_GetCentury1(year: c_int) -> c_int;
    // NOT_SUPPORTED: pub fn wxDateTime_GetCountry() -> Country;
    // NOT_SUPPORTED: pub fn wxDateTime_GetCurrentMonth(cal: Calendar) -> Month;
    // NOT_SUPPORTED: pub fn wxDateTime_GetCurrentYear(cal: Calendar) -> c_int;
    // NOT_SUPPORTED: pub fn wxDateTime_GetEnglishMonthName(month: Month, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetEnglishWeekDayName(weekday: WeekDay, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetMonthName(month: Month, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetNumberOfDays(year: c_int, cal: Calendar) -> wxDateTime_t;
    // NOT_SUPPORTED: pub fn wxDateTime_GetNumberOfDays1(month: Month, year: c_int, cal: Calendar) -> wxDateTime_t;
    // NOT_SUPPORTED: pub fn wxDateTime_GetTimeNow() -> time_t;
    // BLOCKED: pub fn wxDateTime_GetTmNow(tm: *mut c_void) -> *mut c_void;
    pub fn wxDateTime_GetTmNow1() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_GetWeekDayName(weekday: WeekDay, flags: NameFlags) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_IsDSTApplicable(year: c_int, country: Country) -> bool;
    pub fn wxDateTime_GetFirstWeekDay(first_day: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxDateTime_IsLeapYear(year: c_int, cal: Calendar) -> bool;
    // NOT_SUPPORTED: pub fn wxDateTime_IsWestEuropeanCountry(country: Country) -> bool;
    pub fn wxDateTime_Now() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxDateTime_SetCountry(country: Country);
    // NOT_SUPPORTED: pub fn wxDateTime_SetToWeekOfYear(year: c_int, num_week: wxDateTime_t, weekday: WeekDay) -> *mut c_void;
    pub fn wxDateTime_Today() -> *mut c_void;
    pub fn wxDateTime_UNow() -> *mut c_void;

    // wxDateTimeHolidayAuthority
    pub fn wxDateTimeHolidayAuthority_delete(self_: *mut c_void);

    // wxDateTimeWorkDays
    pub fn wxDateTimeWorkDays_delete(self_: *mut c_void);

    // wxDir
    pub fn wxDir_delete(self_: *mut c_void);
    pub fn wxDir_new() -> *mut c_void;
    pub fn wxDir_new1(dir: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxDir_~wxDir(self_: *mut c_void);
    pub fn wxDir_Close(self_: *mut c_void);
    pub fn wxDir_GetFirst(
        self_: *const c_void,
        filename: *mut c_void,
        filespec: *const c_void,
        flags: c_int,
    ) -> bool;
    pub fn wxDir_GetName(self_: *const c_void) -> *mut c_void;
    pub fn wxDir_GetNameWithSep(self_: *const c_void) -> *mut c_void;
    pub fn wxDir_GetNext(self_: *const c_void, filename: *mut c_void) -> bool;
    pub fn wxDir_HasFiles(self_: *const c_void, filespec: *const c_void) -> bool;
    pub fn wxDir_HasSubDirs(self_: *const c_void, dirspec: *const c_void) -> bool;
    pub fn wxDir_IsOpened(self_: *const c_void) -> bool;
    pub fn wxDir_Open(self_: *mut c_void, dir: *const c_void) -> bool;
    pub fn wxDir_Traverse(
        self_: *const c_void,
        sink: *mut c_void,
        filespec: *const c_void,
        flags: c_int,
    ) -> usize;
    pub fn wxDir_Exists(dir: *const c_void) -> bool;
    pub fn wxDir_FindFirst(
        dirname: *const c_void,
        filespec: *const c_void,
        flags: c_int,
    ) -> *mut c_void;
    pub fn wxDir_GetAllFiles(
        dirname: *const c_void,
        files: *mut c_void,
        filespec: *const c_void,
        flags: c_int,
    ) -> usize;
    // NOT_SUPPORTED: pub fn wxDir_GetTotalSize(dir: *const c_void, files_skipped: *mut c_void) -> wxULongLong;
    pub fn wxDir_Make(dir: *const c_void, perm: c_int, flags: c_int) -> bool;
    pub fn wxDir_Remove(dir: *const c_void, flags: c_int) -> bool;

    // wxDirTraverser
    pub fn wxDirTraverser_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxDirTraverser_OnDir(self_: *mut c_void, dirname: *const c_void) -> wxDirTraverseResult;
    // NOT_SUPPORTED: pub fn wxDirTraverser_OnFile(self_: *mut c_void, filename: *const c_void) -> wxDirTraverseResult;
    // NOT_SUPPORTED: pub fn wxDirTraverser_OnOpenError(self_: *mut c_void, openerrorname: *const c_void) -> wxDirTraverseResult;

    // wxEncodingConverter
    pub fn wxEncodingConverter_CLASSINFO() -> *mut c_void;
    pub fn wxEncodingConverter_Convert(
        self_: *const c_void,
        input: *const c_void,
        output: *mut c_void,
    ) -> bool;
    pub fn wxEncodingConverter_Convert1(
        self_: *const c_void,
        input: *const c_void,
        output: *mut c_void,
    ) -> bool;
    pub fn wxEncodingConverter_Convert2(
        self_: *const c_void,
        input: *const c_void,
        output: *mut c_void,
    ) -> bool;
    pub fn wxEncodingConverter_Convert3(
        self_: *const c_void,
        input: *const c_void,
        output: *mut c_void,
    ) -> bool;
    pub fn wxEncodingConverter_Convert4(self_: *const c_void, str: *mut c_void) -> bool;
    pub fn wxEncodingConverter_Convert5(self_: *const c_void, str: *mut c_void) -> bool;
    pub fn wxEncodingConverter_Convert6(self_: *const c_void, input: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxEncodingConverter_Init(self_: *mut c_void, input_enc: wxFontEncoding, output_enc: wxFontEncoding, method: c_int) -> bool;
    // NOT_SUPPORTED: pub fn wxEncodingConverter_GetAllEquivalents(enc: wxFontEncoding) -> wxFontEncodingArray;
    // NOT_SUPPORTED: pub fn wxEncodingConverter_GetPlatformEquivalents(enc: wxFontEncoding, platform: c_int) -> wxFontEncodingArray;
    pub fn wxEncodingConverter_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxEncodingConverter_CanConvert(enc_in: wxFontEncoding, enc_out: wxFontEncoding) -> bool;

    // wxEvent
    pub fn wxEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxEvent_new(id: c_int, event_type: wxEventType) -> *mut c_void;
    pub fn wxEvent_Clone(self_: *const c_void) -> *mut c_void;
    pub fn wxEvent_GetEventObject(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxEvent_GetEventType(self_: *const c_void) -> wxEventType;
    // NOT_SUPPORTED: pub fn wxEvent_GetEventCategory(self_: *const c_void) -> wxEventCategory;
    pub fn wxEvent_GetId(self_: *const c_void) -> c_int;
    pub fn wxEvent_GetEventUserData(self_: *const c_void) -> *mut c_void;
    pub fn wxEvent_GetSkipped(self_: *const c_void) -> bool;
    pub fn wxEvent_GetTimestamp(self_: *const c_void) -> c_long;
    pub fn wxEvent_IsCommandEvent(self_: *const c_void) -> bool;
    pub fn wxEvent_ResumePropagation(self_: *mut c_void, propagation_level: c_int);
    pub fn wxEvent_SetEventObject(self_: *mut c_void, object: *mut c_void);
    // NOT_SUPPORTED: pub fn wxEvent_SetEventType(self_: *mut c_void, type_: wxEventType);
    pub fn wxEvent_SetId(self_: *mut c_void, id: c_int);
    pub fn wxEvent_SetTimestamp(self_: *mut c_void, time_stamp: c_long);
    pub fn wxEvent_ShouldPropagate(self_: *const c_void) -> bool;
    pub fn wxEvent_Skip(self_: *mut c_void, skip: bool);
    pub fn wxEvent_StopPropagation(self_: *mut c_void) -> c_int;

    // wxEvtHandler
    pub fn wxEvtHandler_CLASSINFO() -> *mut c_void;
    pub fn wxEvtHandler_QueueEvent(self_: *mut c_void, event: *mut c_void);
    pub fn wxEvtHandler_AddPendingEvent(self_: *mut c_void, event: *const c_void);
    // NOT_SUPPORTED: pub fn wxEvtHandler_CallAfter(self_: *mut c_void, method: *mut c_void, x1: T1, None: ...);
    // BLOCKED: pub fn wxEvtHandler_CallAfter1(self_: *mut c_void, functor: *const c_void);
    pub fn wxEvtHandler_ProcessEvent(self_: *mut c_void, event: *mut c_void) -> bool;
    pub fn wxEvtHandler_ProcessEventLocally(self_: *mut c_void, event: *mut c_void) -> bool;
    pub fn wxEvtHandler_SafelyProcessEvent(self_: *mut c_void, event: *mut c_void) -> bool;
    pub fn wxEvtHandler_ProcessPendingEvents(self_: *mut c_void);
    pub fn wxEvtHandler_DeletePendingEvents(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxEvtHandler_Connect(self_: *mut c_void, id: c_int, last_id: c_int, event_type: wxEventType, function: wxObjectEventFunction, user_data: *mut c_void, event_sink: *mut c_void);
    // NOT_SUPPORTED: pub fn wxEvtHandler_Connect1(self_: *mut c_void, id: c_int, event_type: wxEventType, function: wxObjectEventFunction, user_data: *mut c_void, event_sink: *mut c_void);
    // NOT_SUPPORTED: pub fn wxEvtHandler_Connect2(self_: *mut c_void, event_type: wxEventType, function: wxObjectEventFunction, user_data: *mut c_void, event_sink: *mut c_void);
    // NOT_SUPPORTED: pub fn wxEvtHandler_Disconnect(self_: *mut c_void, event_type: wxEventType, function: wxObjectEventFunction, user_data: *mut c_void, event_sink: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxEvtHandler_Disconnect1(self_: *mut c_void, id: c_int, event_type: wxEventType, function: wxObjectEventFunction, user_data: *mut c_void, event_sink: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxEvtHandler_Disconnect2(self_: *mut c_void, id: c_int, last_id: c_int, event_type: wxEventType, function: wxObjectEventFunction, user_data: *mut c_void, event_sink: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxEvtHandler_Bind(self_: *mut c_void, event_type: *const c_void, functor: Functor, id: c_int, last_id: c_int, user_data: *mut c_void);
    // BLOCKED: pub fn wxEvtHandler_Bind1(self_: *mut c_void, event_type: *const c_void, method: *mut c_void, handler: *mut c_void, id: c_int, last_id: c_int, user_data: *mut c_void);
    // NOT_SUPPORTED: pub fn wxEvtHandler_Unbind(self_: *mut c_void, event_type: *const c_void, functor: Functor, id: c_int, last_id: c_int, user_data: *mut c_void) -> bool;
    // BLOCKED: pub fn wxEvtHandler_Unbind1(self_: *mut c_void, event_type: *const c_void, method: *mut c_void, handler: *mut c_void, id: c_int, last_id: c_int, user_data: *mut c_void) -> bool;
    // BLOCKED: pub fn wxEvtHandler_GetClientData(self_: *const c_void) -> *mut c_void;
    pub fn wxEvtHandler_GetClientObject(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxEvtHandler_SetClientData(self_: *mut c_void, data: *mut c_void);
    pub fn wxEvtHandler_SetClientObject(self_: *mut c_void, data: *mut c_void);
    pub fn wxEvtHandler_GetEvtHandlerEnabled(self_: *const c_void) -> bool;
    pub fn wxEvtHandler_GetNextHandler(self_: *const c_void) -> *mut c_void;
    pub fn wxEvtHandler_GetPreviousHandler(self_: *const c_void) -> *mut c_void;
    pub fn wxEvtHandler_SetEvtHandlerEnabled(self_: *mut c_void, enabled: bool);
    pub fn wxEvtHandler_SetNextHandler(self_: *mut c_void, handler: *mut c_void);
    pub fn wxEvtHandler_SetPreviousHandler(self_: *mut c_void, handler: *mut c_void);
    pub fn wxEvtHandler_Unlink(self_: *mut c_void);
    pub fn wxEvtHandler_IsUnlinked(self_: *const c_void) -> bool;
    pub fn wxEvtHandler_AddFilter(filter: *mut c_void);
    pub fn wxEvtHandler_RemoveFilter(filter: *mut c_void);
    pub fn wxEvtHandler_new() -> *mut c_void;
    // DTOR: pub fn wxEvtHandler_~wxEvtHandler(self_: *mut c_void);
